--- a/src/pages/development.css
+++ b/src/pages/development.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     background-color: white;
-    background-image: url("../image/dagu.jpg"); /* 修改为你的图片路径 */
+    background-image: url("../img/dagu.jpg"); /* 修改为你的图片路径 */
     background-size: revert;
     background-position: 0 100px;
     background-repeat: no-repeat;
