--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -12,6 +12,13 @@ body {
     padding: 0;
     height: 100px;
 }
+
+.homeHeader h1 {
+    margin: 50px;
+    font-family: 'JetBrains Mono', sans-serif; /* Replace with your desired font */
+    font-size: 50px;
+
+}
 .homeNav {
     display: flex;
     /*width: 500px;*/
@@ -67,13 +74,23 @@ body {
 }
 
 
-.announcement{
+.announcement {
     position: absolute;
     top: 100px;
     left: 0;
     width: 300px;
     height: 500px;
     border: 1px solid #61dafb;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.announcement h1 {
+    font-family: 'JetBrains Mono', sans-serif; /* Replace with your desired font */
+    font-size: 50px;
 }
 
 .shop{
@@ -96,7 +113,7 @@ body {
 
 .greatmingimg{
     position: absolute;
-    top: 90px;
+    top: 100px;
     right: 0;
     width: 300px;
     height: 300px;
