--- a/client/src/pages/homepage.css
+++ b/client/src/pages/homepage.css
@@ -90,16 +90,25 @@ body {
 
 .announcement h1 {
     font-family: 'JetBrains Mono', sans-serif; /* Replace with your desired font */
-    font-size: 50px;
+    font-size: 50px;    /*标题字体大小*/
 }
 
 .shop{
     position: absolute;
-    top: 590px;
+    top: 600px;
     left: 0px;
     width: 300px;
     height: 500px;
     border: 1px solid #ccc;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.shop h1 {
+    font-family: 'JetBrains Mono', sans-serif; /* Replace with your desired font */
+    font-size: 50px;    /*标题字体大小*/
 }
 
 .hotspot{
@@ -124,9 +133,13 @@ body {
 
 .group{
     position: absolute;
-    top: 390px;
+    top: 400px;
     right: 0;
     width: 300px;
     height: 700px;
     border: 1px solid #ccc;
+}
+.group h1 {
+    font-family: 'JetBrains Mono', sans-serif; /* Replace with your desired font */
+    font-size: 50px;
 }
