--- a/client/src/pages/homepage.css
+++ b/client/src/pages/homepage.css
@@ -56,7 +56,7 @@ body {
 .carousel-container {
     position: absolute;
     top: 100px;
-    left: 500px;
+    left: 30%;
     width: 800px;
     height: 372px;
     border: 1px solid #ccc;
@@ -113,11 +113,26 @@ body {
 
 .hotspot{
     position: absolute;
-    top: 590px;
-    left: 400px;
+    top: 600px;
+    left: 25%;
     width: 1000px;
     height: 500px;
     border: 1px solid #ccc;
+
+
+}
+.hotspot h1 {
+    font-family: 'JetBrains Mono', sans-serif; /* Replace with your desired font */
+    font-size: 50px;
+    margin: 0; /* Remove default margin for h1 */
+    text-align: center; /* Center text horizontally */
+
+}
+.hotspot p{
+    font-family: 'JetBrains Mono', sans-serif; /* Replace with your desired font */
+    font-size: 30px;
+    margin: 0; /* Remove default margin for h1 */
+    text-align: center; /* Center text horizontally */
 }
 
 .greatmingimg{
@@ -131,15 +146,28 @@ body {
     background-repeat: no-repeat;
 }
 
-.group{
+.group {
     position: absolute;
     top: 400px;
     right: 0;
     width: 300px;
     height: 700px;
     border: 1px solid #ccc;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center; /* Center content vertically */
 }
+
 .group h1 {
     font-family: 'JetBrains Mono', sans-serif; /* Replace with your desired font */
     font-size: 50px;
+    margin: 0; /* Remove default margin for h1 */
+    text-align: center; /* Center text horizontally */
+}
+.group p{
+    font-family: 'JetBrains Mono', sans-serif; /* Replace with your desired font */
+    font-size: 20px;
+    margin: 0; /* Remove default margin for h1 */
+    text-align: center; /* Center text horizontally */
 }
