--- a/client/src/pages/homepage.css
+++ b/client/src/pages/homepage.css
@@ -37,18 +37,24 @@ body {
 .homeLogin {
     display: flex;
     align-items: center;
-    padding: 30px 20px;
 }
 
-.homeLogin button {
-    background-color: #f2f2f2;
-    border: none;
-    padding: 15px 30px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    color: #333;
+.homeLogin p{
+    display: flex;
+    align-items: center; /* 垂直居中 */
+    justify-content: center; /* 水平居中 */
+    height: 100%; /* 让元素占满父容器的高度 */
+    margin: 0; /* 重置默认的外边距 */
 }
+/*.homeLogin button {*/
+/*    background-color: #f2f2f2;*/
+/*    border: none;*/
+/*    padding: 15px 30px;*/
+/*    border-radius: 5px;*/
+/*    cursor: pointer;*/
+/*    font-size: 16px;*/
+/*    color: #333;*/
+/*}*/
 
 /*
 轮播图
@@ -95,7 +101,7 @@ body {
 
 .shop{
     position: absolute;
-    top: 590px;
+    top: 600px;
     left: 0px;
     width: 300px;
     height: 500px;
@@ -104,7 +110,7 @@ body {
 
 .hotspot{
     position: absolute;
-    top: 590px;
+    top: 600px;
     left: 400px;
     width: 1000px;
     height: 500px;
@@ -124,7 +130,7 @@ body {
 
 .group{
     position: absolute;
-    top: 390px;
+    top: 400px;
     right: 0;
     width: 300px;
     height: 700px;
